# linuxcnc

linuxQtCnc/: CMakeLists.txt  decoder_design_review.html  设计模式复查报告.md
linuxQtCnc/cmake/: config.h.in
linuxQtCnc/configs/common/: client.nml  linuxcnc.nml  linuxcnc_big.nml  server.nml  shuttle.hal  tool.tbl
linuxQtCnc/lib/hallib/: axis_manualtoolchange.hal  basic_sim.tcl  check_config.tcl  check_xyz_constraints.hal  core_servo.hal  core_sim.hal  core_sim9.hal  core_stepper.hal  gantrysim.hal  hal_procs_lib.tcl  halcheck.tcl  hookup_moveoff.tcl  lathe.hal  lh_chart.tcl  locking_indexer.hal  moveoff_external.hal  plasmac.tcl  qtplasmac_comp.hal  servo_sim.hal  sim_ldelta.hal  sim_lib.tcl  sim_rdelta.hal  sim_spindle_encoder.hal  simulated-gantry-home.hal  simulated-xyyz-home.hal  simulated_home.hal  simulated_limits.hal  tripodsim.hal  util_lib.tcl  var_show.tcl  wheeljogpins.tcl  xhc-hb04.tcl
linuxQtCnc/nc_files/: 3D_Chips.ngc  3dtest.ngc  arcspiral.ngc  b-index.ngc  cds.ngc  comp-g1.ngc  comp.ngc  comp311.ngc  comp311_2.ngc  cone.ngc  daisy.ngc  factorial.ngc  flowsnake.ngc  g20sub.ngc  g76.ngc  g881.ngc  g881min.ngc  g882.ngc  gmoccapy_2_tools_with_cutter_radius_compensation.ngc  gridprobe.ngc  hole-circle.ngc  increment.ngc  lathe_g70_71_demo.ngc  lathe_g7x_face_boring.ngc  lathe_g7x_quadrants.ngc  lathe_pawn.ngc  lathecomp.ngc  m250.ngc  m61demo.ngc  m6demo.ngc  m6remap.ngc  m70m72-demo.ngc  m73-demo.ngc  m75.ngc  m76.ngc  mmount.ngc  nestedcall.ngc  offsets.ngc  polar.ngc  probe-hole.ngc  (+13 more)
linuxQtCnc/nc_files/gcmc_lib/: cpocket.gcmc  drill.gcmc  ensure_units.gcmc  involute-gear.gcmc  rectangle.gcmc  star.gcmc  trochoid-path.gcmc  wheels.gcmc
linuxQtCnc/nc_files/gladevcp_lib/: oword.ngc
linuxQtCnc/nc_files/macros/lathe/: boring.ngc  chamfer.ngc  drill.ngc  facing.ngc  go_to_position.ngc  probe-hole.ngc  radius.ngc  threading.ngc  turning.ngc
linuxQtCnc/nc_files/macros/mill/: go_to_home.ngc  go_to_position.ngc  go_to_zero.ngc
linuxQtCnc/nc_files/ngcgui_lib/: arc1.ngc  arc2.ngc  backlash.ngc  db25.ngc  gosper.ngc  helix.ngc  helix_rtheta.ngc  hole_circle.ngc  ihex.ngc  iquad.ngc  ohex.ngc  oquad.ngc  qpex.ngc  qpex_mm.ngc  qpocket.ngc  rectangle_probe.ngc  simp.ngc  slot.ngc  xyz.ngc
linuxQtCnc/nc_files/ngcgui_lib/lathe/: g76base.ngc  g76diam.ngc  id.ngc  lathe_std.ngc  od.ngc  taper-od.ngc
linuxQtCnc/nc_files/ngcgui_lib/utilitysubs/: bye.ngc  cross.ngc  dir.ngc  dot.ngc  entry.ngc  g59preview.ngc  gosper_sub.ngc  in_std.ngc  line.ngc  loadtool.ngc  mm_std.ngc  move.ngc  pointsdata.ngc  spin.ngc
linuxQtCnc/nc_files/nurbs/G5/: butterfly-xy.ngc  butterfly-yz.ngc  butterfly-zx.ngc  leto-xy.ngc  nurbs-xy.ngc  nurbs-yz.ngc  nurbs-zx.ngc  trident-xy-yz-zx.ngc  trident-xy.ngc  trident-yz.ngc  trident-zx.ngc
linuxQtCnc/nc_files/plasmac/: imperial_air_scribe.ngc  imperial_circles.ngc  imperial_ihs_skip_thc_off.ngc  imperial_ihs_skip_thc_on.ngc  imperial_line.ngc  imperial_material_change.ngc  imperial_ramp_pierce.ngc  imperial_squares.ngc  imperial_temporary_materials.ngc  imperial_wrench.ngc  metric_air_scribe.ngc  metric_circles.ngc  metric_ihs_skip_thc_off.ngc  metric_ihs_skip_thc_on.ngc  metric_line.ngc  metric_material_change.ngc  metric_ramp_pierce.ngc  metric_squares.ngc  metric_temporary_materials.ngc  metric_wrench.ngc
linuxQtCnc/nc_files/probe/: down.ngc  xminus.ngc  xplus.ngc  yminus.ngc  yplus.ngc
linuxQtCnc/nc_files/probe/gtk_probe/: gtk_probe_down.ngc  gtk_probe_xminus.ngc  gtk_probe_xplus.ngc  gtk_probe_yminus.ngc  gtk_probe_yplus.ngc
linuxQtCnc/nc_files/remap-subroutines/: qt_auto_probe_tool.ngc
linuxQtCnc/nc_files/remap_lib/common_nc_subs/: on_abort.ngc  reset_state.ngc
linuxQtCnc/src/core/: linuxcnc.h
linuxQtCnc/src/core/hal/: hal.h  hal.hh  hal_lib.c  hal_parport.h  hal_priv.h
linuxQtCnc/src/core/module_helper/: module_helper.c
linuxQtCnc/src/core/posix_compat/: posix_compat.c  posix_compat.h
linuxQtCnc/src/core/pythonplugin/: python_plugin_stub.hh
linuxQtCnc/src/core/rtapi/: mathstubs.c  rtai_rtapi.c  rtai_ulapi.c  rtapi.h  rtapi_app.h  rtapi_atomic.h  rtapi_bitops.h  rtapi_bool.h  rtapi_byteorder.h  rtapi_common.h  rtapi_ctype.h  rtapi_device.h  rtapi_errno.h  rtapi_firmware.h  rtapi_gfp.h  rtapi_io.h  rtapi_limits.h  rtapi_list.h  rtapi_math.h  rtapi_math64.h  rtapi_math_i386.h  rtapi_mutex.h  rtapi_parport.h  rtapi_pci.cc  rtapi_pci.h  rtapi_proc.h  rtapi_rtai_shm_wrap.h  rtapi_slab.h  rtapi_stdint.h  rtapi_string.h  rtapi_vsnprintf.h  uspace_common.h  uspace_posix.cc  uspace_rtai.cc  uspace_rtapi_app.cc  uspace_rtapi_app.hh  uspace_rtapi_main.cc  uspace_rtapi_parport.cc  uspace_rtapi_string.c  uspace_ulapi.c  (+2 more)
linuxQtCnc/src/gui/: CMakeLists.txt  LcncApplication.cpp  LcncApplication.h  main.cpp
linuxQtCnc/src/gui/core/: CMakeLists.txt  LcncCommand.cpp  LcncCommand.h  LcncCore.cpp  LcncCore.h  LcncHalMonitor.cpp  LcncHalMonitor.h  LcncOffsetTable.cpp  LcncOffsetTable.h  LcncStatusData.h  LcncToolTable.cpp  LcncToolTable.h
linuxQtCnc/src/gui/halmon/: CMakeLists.txt  HalMonitor.cpp  HalMonitor.h  HalTreeModel.cpp  HalTreeModel.h
linuxQtCnc/src/gui/mainwindow/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
linuxQtCnc/src/gui/preview/: CMakeLists.txt  GCodeParser.cpp  GCodeParser.h  ToolpathView.cpp  ToolpathView.h
linuxQtCnc/src/gui/scope/: CMakeLists.txt  ScopeChannel.cpp  ScopeChannel.h  ScopeView.cpp  ScopeView.h
linuxQtCnc/src/gui/widgets/: CMakeLists.txt  DROWidget.cpp  DROWidget.h  GCodeEditor.cpp  GCodeEditor.h  HalMonitorWidget.cpp  HalMonitorWidget.h  JogPanel.cpp  JogPanel.h  OffsetTableWidget.cpp  OffsetTableWidget.h  ScopeWidget.cpp  ScopeWidget.h  StatusBar.cpp  StatusBar.h  ToolTableWidget.cpp  ToolTableWidget.h
linuxQtCnc/src/tools/backend/: emclcd.cc  emcrsh.cc  emcsched.cc  emcsched.hh  emcsh.cc  halui.cc  mapini.cc  mapini.hh  schedrmt.cc  shcom.cc  shcom.hh  sockets.c  sockets.h  unitenum.hh
linuxQtCnc/src/tools/halcmd/: halcmd_commands.h  halcmd_completion.c  halcmd_main.c  meter.c  miscgtk.c  pci_read.c  scope_disp.c  scope_horiz.c  scope_shm.h  scope_trig.c  upci.c  upci.h
(+565 files in other folders)
